--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,10 +1,5 @@
 .App {
-  background: #bdc3c7;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2c3e50, #bdc3c7);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2c3e50, #bdc3c7);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #f8f9fa;
   height: 100%;
   min-height: 2000px; }
 
@@ -12,7 +7,8 @@
   height: 43px; }
 
 .navbar {
-  justify-content: left; }
+  justify-content: left;
+  background-color: #343A40; }
   .navbar ul {
     padding-bottom: 0; }
   .navbar .task-number {
@@ -22,8 +18,10 @@
     padding: .4rem 1rem;
     border-radius: 7px; }
 
-.task-form .card {
-  border-width: 0 !important; }
+.card {
+  box-shadow: 7px 7px 14px -8px #666666;
+  border: 1px solid #b1b1b1; }
+
 .task-form .card-header {
   background: #343A40;
   color: #61DAFB;
