--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,11 +1,3 @@
-.App {
-  background: #f8f9fa;
-  height: 100%;
-  min-height: 2000px; }
-
-.App-logo {
-  height: 43px; }
-
 .navbar {
   justify-content: left;
   background-color: #343A40; }
@@ -16,16 +8,41 @@
     background: #61DAFB;
     font-weight: bold;
     padding: .4rem 1rem;
-    border-radius: 7px; }
+    border-radius: 7px;
+    margin-left: 5rem; }
+  .navbar .App-logo {
+    height: 43px; }
 
-.card {
+.news-form {
   box-shadow: 7px 7px 14px -8px #666666;
   border: 1px solid #b1b1b1; }
+  .news-form .card-header {
+    background: #343A40;
+    color: #61DAFB;
+    font-weight: bold; }
 
-.task-form .card-header {
-  background: #343A40;
-  color: #61DAFB;
-  font-weight: bold; }
+.fa-icon.fa-search::after {
+  content: "\f002";
+  margin-right: 7px; }
+
+.card.new_card {
+  box-shadow: 7px 7px 14px -8px #666666;
+  border: 1px solid #b1b1b1; }
+  .card.new_card button {
+    padding-right: 10px; }
+  .card.new_card button.fa-delete {
+    margin-left: 1rem; }
+  .card.new_card .fa-icon.fa-delete::after {
+    content: "\f2ed";
+    margin-right: 10px; }
+  .card.new_card .fa-icon.fa-goto::after {
+    content: "\f530";
+    margin-right: 10px; }
+
+.App {
+  background: #f8f9fa;
+  height: 100%;
+  min-height: 2000px; }
 
 .fa-icon::after {
   font-family: "Font Awesome 5 Free";
@@ -36,10 +53,7 @@
   left: .7rem;
   position: relative; }
 
-.fa-icon.fa-delete::after {
-  content: "\f2ed"; }
-
-.fa-icon.fa-done::after {
-  content: "\f058"; }
+.fa-icon::before {
+  display: none; }
 
 /*# sourceMappingURL=App.css.map */
