--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,44 +1,13 @@
 @import 'colores';
 @import 'efectos';
+@import 'navbar';
+@import 'news_form';
+@import 'news_card';
 
 .App {
   background:$blanco;
   height: 100%;
   min-height:2000px;
-}
-
-.App-logo {
-  height: 43px;
-}
-
-.navbar{
-  justify-content:left;
-  background-color: $gris_oscuro;
-
-  ul{
-    padding-bottom:0;
-  }
-
-  .task-number{
-    color: $gris_oscuro;
-    background: $azul_claro;
-    font-weight:bold;
-    padding:.4rem 1rem;
-    border-radius:7px;
-  }
-}
-
-.card {
-  @include elemento_sombreado;
-}
-
-.task-form {
-
-  .card-header{
-    background:$gris_oscuro;
-    color:$azul_claro;
-    font-weight:bold;
-  }
 }
 
 .fa-icon::after{
@@ -51,10 +20,8 @@
   position:relative;
 }
 
-.fa-icon.fa-delete::after {
-  content: "\f2ed";
+.fa-icon::before {
+  display:none;
 }
 
-.fa-icon.fa-done::after {
-  content: "\f058";
-}
+
